--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CameraFragment"
-    >
+    tools:context=".CameraFragment">
 
     <TextureView
         android:id="@+id/texture_view"
@@ -18,22 +17,34 @@
         android:layout_height="match_parent" />
 
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_expand_more_black_24dp"
-        android:layout_gravity="top|right"
-        android:layout_margin="8dp"/>
 
 
-
-    <TextView
-        android:id="@+id/text_view"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:padding="16dp"
-        android:textColor="@android:color/white"
-        android:background="#80000000" />
+        android:layout_gravity="bottom">
+
+
+        <TextView
+            android:id="@+id/text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:textColor="@android:color/white"
+            android:background="#80000000" />
+
+
+        <ImageView
+            android:id="@+id/changeCamera"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/change_camera"
+            android:background="#00000000"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16dp"/>
+
+    </RelativeLayout>
+
+
 </FrameLayout>
