--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -17,32 +17,64 @@
         android:layout_height="match_parent" />
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/transparentGray">
+
+
+        <TextView
+            android:id="@+id/face_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="12dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="8dp"
+            />
+
+        <TextView
+            android:id="@+id/camera_speed_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:background="#00000000"
+            android:layout_alignParentRight="true"
+            />
+
+    </RelativeLayout>
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        >
+
+
 
 
         <TextView
-            android:id="@+id/text_view"
+            android:id="@+id/label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
             android:textColor="@android:color/white"
-            android:background="#80000000" />
+            android:layout_alignParentBottom="true"
+            android:background="@color/transparentGray"
+            />
 
 
         <ImageView
             android:id="@+id/changeCamera"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@drawable/change_camera"
-            android:background="#00000000"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="16dp"/>
+            android:layout_alignParentBottom="true"
+            android:padding="16dp"
+
+            />
 
     </RelativeLayout>
 
